######### 2013-7-20  ###########
alter table shop_purchases_storage add column is_addon tinyint(1) NOT NULL;
alter table shop_purchases_storageitem add column is_addon tinyint(1) NOT NULL;
######### 2013-7-10  ###########
alter table shop_purchases_storage add column storage_num int(11) NOT NULL;
alter table shop_purchases_storage add column total_fee double NOT NULL;
alter table shop_purchases_storage add column payment double NOT NULL;

alter table shop_purchases_storageitem add column total_fee double NOT NULL;
alter table shop_purchases_storageitem add column payment double NOT NULL;

alter table shop_purchases_relationship add column total_fee double NOT NULL;
alter table shop_purchases_relationship change column relate_fee payment double NOT NULL;

alter table shop_monitor_systemconfig add column jhs_logistic_code varchar(20) NOT NULL;
######### 2013-7-10  ###########
alter table shop_items_productsku add column created datetime DEFAULT NULL;
update shop_items_productsku set created=modified;
alter table shop_purchases_storage change post_date post_date date DEFAULT NULL;
alter table shop_purchases_storage change forecast_date forecast_date date DEFAULT NULL;
######### 2013-7-4  ###########
alter table shop_purchases_purchase add column purchase_num int(11) default 0;
alter table shop_purchases_purchase add column storage_num int(11) default 0;
alter table shop_purchases_item add column storage_num int(11) default 0;
######### 2013-6-29 ###########
ALTER TABLE shop_purchases_purchase AUTO_INCREMENT=9999;
######### 2013-6-26 ###########
alter table shop_trades_mergeorder drop index shop_trades_mergeorder_1e04cc3c,
	drop index shop_trades_mergeorder_4db90882,add index(outer_id,outer_sku_id);
######### 2013-6-13 ###########
alter table shop_trades_replayposttrade add column fid  int(20) DEFAULT 0;
######### 2013-6-7  ###########
alter table shop_items_product add column buyer_prompt varchar(40) NOT NULL;