@@ -1,4 +1,7 @@
 ######### 2013-7-20  ###########
+alter table shop_monitor_systemconfig add column storage_num_to_stock_auto tinyint(1) NOT NULL;
+alter table shop_monitor_systemconfig add column purchase_price_to_cost_auto tinyint(1) NOT NULL;
+
 alter table shop_purchases_storage add column is_addon tinyint(1) NOT NULL;
 alter table shop_purchases_storageitem add column is_addon tinyint(1) NOT NULL;
 ######### 2013-7-10  ###########
